# pdf-bank-to-excel

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  KICKOFF_PROMPT.md  README.md  app.py  config.toml  docker-compose.yml  pyproject.toml  run_gui.py  start.bat  start.sh
.claude/: settings.local.json
skills/: accounting_skill.md
src/statement_to_excel/: __init__.py  __main__.py  detect.py  export.py  ingest.py  models.py  normalize.py  ocr.py  pipeline.py
src/statement_to_excel/extractors/: __init__.py  barclays.py  barclays_2026.py  base.py  generic.py  hsbc.py  lloyds.py  metrobank.py  monzobank.py  natwestbank.py  rbsbank.py  revolutbank.py  starlingbank.py  tidebank.py  virginmoneybank.py  zemplerbank.py
tests/: conftest.py  test_detect.py  test_extractors_barclays.py  test_extractors_barclays_2026.py  test_extractors_hsbc.py  test_extractors_lloyds.py  test_extractors_metrobank.py  test_extractors_monzobank.py  test_extractors_natwestbank.py  test_extractors_rbsbank.py  test_extractors_revolutbank.py  test_extractors_starlingbank.py  test_extractors_tidebank.py  test_extractors_virginmoneybank.py  test_extractors_zemplerbank.py  test_models.py  test_normalize.py  test_pipeline.py  test_reconciliation.py
