[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statement-to-excel"
version = "0.1.0"
description = "Convert PDF bank statements to Excel"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber~=0.11",
    "openpyxl~=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "mypy~=1.10",
    "ruff~=0.4",
]

[project.scripts]
statement-to-excel = "statement_to_excel.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/statement_to_excel"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
